fixed h3 spacing

--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -36,3 +36,15 @@
   margin-bottom: 0rem;
   font-size: 90%;
 }
+
+.title.is-4 {
+  font-size: 2rem;
+}
+.content h3 {
+  margin-bottom: 0;
+  margin-top: 1em;
+}
+
+.content h3:not(:first-child) {
+  margin-top: 1em;
+}
